--- a/src/plugin/modal/modal.css
+++ b/src/plugin/modal/modal.css
@@ -1,7 +1,7 @@
-.xs-modal {
+.airx-modal {
 	
 }
-.xs-modal-mask {
+.airx-modal-mask {
 	z-index: 1;
 	position: fixed;
 	top: 0;
@@ -10,7 +10,7 @@
 	left: 0;
 	background: rgba(0,0,0,0.2);
 }
-.xs-modal-box {
+.airx-modal-box {
 	z-index: 2;
 	position: absolute;
 	top: 50px;
@@ -20,7 +20,7 @@
 	box-shadow: 0 0 20px rgba(0,0,0,0.5);
 	border-radius: 10px;
 }
-.xs-modal-title {
+.airx-modal-title {
 	line-height: 50px;
 	height: 50px;
 	line-height: 50px;
@@ -32,10 +32,10 @@
 	border-top-right-radius: 10px;
 	*/
 }
-.xs-modal-title-content {
+.airx-modal-title-content {
 	padding: 0 20px;
 }
-.xs-modal-title-close {
+.airx-modal-title-close {
 	position: absolute;
 	right: 0;
 	top: 0;
@@ -45,10 +45,11 @@
 	background: none;
 	cursor: pointer;
 	font-size: 18px;
+	text-align: center;
 }
-.xs-modal-title-close:hover {
+.airx-modal-title-close:hover {
 	color: #FF9900;
 }
-.xs-modal-content {
+.airx-modal-content {
 	padding: 20px;
 }
