--- a/src/plugin/modal/modal.css
+++ b/src/plugin/modal/modal.css
@@ -16,6 +16,7 @@
 	top: 50px;
 	right: 50px;
 	left: 50px;
+	min-height: 240px;
 	background: #FFFFFF;
 	box-shadow: 0 0 20px rgba(0,0,0,0.5);
 	border-radius: 10px;
