--- a/src/plugin/table/table.css
+++ b/src/plugin/table/table.css
@@ -6,7 +6,7 @@
 	border:#DDDDDD 1px solid;
 	border-bottom: none;
 	line-height: 2em;
-	padding: 0 10px;
+	padding: 4px 14px;
 }
 .airx-table th {
 	background: #F9F9F9;
