继续优化modal文档

--- a/src/assets/common.less
+++ b/src/assets/common.less
@@ -1,5 +1,6 @@
 html,
 body {
+    font-family: Menlo, Monaco, Consolas, "Andale Mono", "lucida console", "Courier New", monospace;
 }
 
 .layout-box {
@@ -12,7 +13,7 @@ body {
         width: 200px;
         overflow-y: auto;
         background: #F9F9F9;
-        box-shadow: 0 0 5px rgba(0,0,0,0.15);
+        box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
     }
     .layout-main {
         z-index: 1;
@@ -35,7 +36,8 @@ body {
             cursor: pointer;
             line-height: 30px;
             padding: 0 20px;
-            &:hover,&.active {
+            &:hover,
+            &.active {
                 background: #FF9900;
                 color: #FFF;
             }
