--- a/src/plugin/select/select.css
+++ b/src/plugin/select/select.css
@@ -2,12 +2,11 @@
 	display: inline-block;
 	height: 30px;
 	line-height: 30px;
-	border: 1px #DDDDDD solid;
-	border-radius: 5px;
 	cursor: pointer;
 	position: relative;
 }
 
+/*
 .airx-select:after {
 	content: ' ';
 	position: absolute;
@@ -22,19 +21,46 @@
 	font-size: 0px;
 	line-height: 0px
 }
+*/
 
-.airx-select .select-green {
-	-webkit-appearance: none;
-	-moz-appearance: none;
-	appearance: none;
+.airx-select-btn {
 	position: relative;
-	outline: none;
-	border: 0 none;
-	position: relative;
-	padding: 0 0 0 10px;
-	width: 100%;
-	background: none;
-	background-color: transparent;
-	z-index: 1;
+	display: inline-block;
+	padding: 0 30px 0 10px;
+	vertical-align: middle;
+	border: 1px solid;
+	border-color: #bcc1c8 #bababa #adb2bb;
+	background: #F9F9F9;
+	text-align: center;
 	overflow: hidden;
+	text-decoration: none!important;
+	cursor: pointer;
+	border-radius: 5px;
+	line-height: 30px;
+}
+
+.airx-select-box {
+	position: absolute;
+	top: 40px;
+	left: 0;
+	z-index: 1;
+	background: #FFFFFF;
+	border: #BBB 1px solid;
+	border-radius: 5px;
+	box-shadow: 0 0 5px rgba(0,0,0,0.15);
+	min-width: 100px;
+}
+.airx-select-box ul {
+	list-style: none;
+	margin: 0;
+	padding: 10px 0;
+}
+.airx-select-box ul li {
+	list-style: none;
+	margin: 0;
+	padding: 0 10px;
+	line-height: 30px;
+}
+.airx-select-box ul li:hover {
+	background: #F0F0F0;
 }
